--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="546"/>
+			<integer value="424"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -759,7 +759,7 @@
 								</object>
 								<object class="NSMenuItem" id="887764408">
 									<reference key="NSMenu" ref="387742784"/>
-									<string key="NSTitle">Add Selected Files</string>
+									<string key="NSTitle">Add (Track) Selected Files</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="385016679"/>
@@ -767,7 +767,7 @@
 								</object>
 								<object class="NSMenuItem" id="20958441">
 									<reference key="NSMenu" ref="387742784"/>
-									<string key="NSTitle">Untrack Selected Files</string>
+									<string key="NSTitle">Remove (Untrack) Selected Files</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="385016679"/>
